# SamFetch

./: Dockerfile  Procfile  README.md  RESOURCES.md  app.json  docker-compose.yml  fly.toml  main.py  pyproject.toml  requirements.txt
samfetch/: __init__.py  classes.py  crypto.py  csc.py  kies.py  session.py
src/: constants.py  crypto.py  csc_list.json  csc_list.py  keyholder.py  main.py  session.py  utils.py
web/: __init__.py  exceptions.py  routes.py
